overflow on small screens fixed

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 html, body{
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	margin: 0; padding: 0;
 }
 *{
 	box-sizing: border-box;
